deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: nginx-app-deployment
    labels:
        app: nginx-app
spec:
    replicas: 3
    selector:
        matchLabels:
            app: nginx-app
    template:
        metadata:
            labels:
                app: nginx-app
        spec:
            containers:
            - name: nginx-app-container
              image: fatihbe25/project_todo_web
              ports:
              - containerPort: 8080
