service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-app-service
spec:
  type: LoadBalancer
  selector:
    app: nginx-app
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
